--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,9 @@ body {
 
 .char {
   position: fixed;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: min(80vw, 80vh);
+  text-shadow: 0 0 min(3vw, 3vh) white;
+  line-height: 1;
   opacity: 0.8;
   z-index: 2;
 }
